# Python-Delete-Alexa-Devices

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: codeql.yml  dependency-review.yml  uv_pytest.yml
config/: global_config.toml
src/alexa_manager/: CODE_REVIEW_SUGGESTIONS.md  __init__.py  __main__.py  api.py  config.py  main.py  models.py  utils.py
tests/: test_api.py  test_config.py  test_main.py  test_models.py  test_utils.py
